[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp_matching"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida" },
]
description = "Unified Python interface for keypoint matching using OpenCV-backed algorithms."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-contrib-python",
    "kp_detection @ git+https://github.com/ry-yoshida-private/KeypointDetector.git",
    "opencv-utility @ git+https://github.com/ry-yoshida-private/OpenCVUtility.git"
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/KeypointMatcher"
"Bug Tracker" = "https://github.com/ry-yoshida-private/KeypointMatcher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kp_matching = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py", "test_*.py", "*_test.py"]
